# midi-footswitch

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SECURITY.md  conanfile.txt  midi-footswitch.ino  platformio.ini  setup-pio-settings.sh
.github/workflows/: ci.yml  codeql.yml
include/: MidiAction.h  MidiButton.h
lib/: README.md
script/: ci_build.sh
src/: Main.cpp
test/: ActionTest.cpp  ButtonTest.cpp  CMakeLists.txt  LedTest.cpp  MidiButtonTest.cpp  TestMain.cpp
test/mock/: Arduino.cpp  Arduino.h  CMakeLists.txt  EasyButton.h  MIDIUSB.h  Mocks.h
